--- a/src/index.html
+++ b/src/index.html
@@ -7,8 +7,33 @@
     <link href="./output.css" rel="stylesheet">
 </head>
 <body>
-    <header>
-        
+    <header class="flx justify-between">
+        <section>
+            <nav>
+                <p>Show</p>
+                <select>
+                    <option>1</option>
+                    <option>2</option>
+                    <option>3</option>
+                    <option>4</option>
+                    <option>5</option>
+                    <option>6</option>
+                    <option>7</option>
+                    <option>8</option>
+                    <option>9</option>
+                    <option>10</option>
+                </select>
+                <p>entries</p>
+            </nav>
+            <input type="text" placeholder="Search">
+        </section>
+
+        <section>
+            <div class="flex items-center px-[12px] py-[8.5px] bg-[#624DE3] rounded-lg">
+                <img src="./images/+.svg" alt="">
+                <p>Add Customer</p>
+            </div>
+        </section>
     </header>
 </body>
 </html>
