--- a/src/index.html
+++ b/src/index.html
@@ -1,12 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link href="./output.css" rel="stylesheet">
 </head>
+
 <body>
+
     <header class="flex justify-between px-[5%] py-[30px]">
         <section class="flex justify-between items-center gap-6">
             <nav class="flex justify-between items-center gap-3 text-[12px] font-[500] leading-[14.63px]">
@@ -19,10 +22,10 @@
             </nav>
             <div class="flex gap-2 w-[218px] items-center border-[1px] border-[#9E9E9E] p-[8px] rounded-lg">
                 <img src="./images/icons_search.svg" alt="">
-                <input type="text" placeholder="Search"  class="outline-none">
+                <input type="text" placeholder="Search" class="outline-none">
             </div>
         </section>
-        
+
         <section>
             <div class="flex items-center px-[12px] py-[8.5px] bg-[#624DE3] rounded-lg  gap-2">
                 <img src="./images/+.svg" alt="">
@@ -30,7 +33,25 @@
             </div>
         </section>
 
-        
+
     </header>
+
+    <section class="px-[5%]">
+        <table class="fflex justify-between">
+            <tr class="flex justify-between items-center">
+                <th class="px-10 py-2 text-left ">Tracking ID</th>
+                <th class="px-10 py-2 text-left col-span-2">Product</th>
+                <th class="px-10 py-2 text-left ">Customer</th>
+                <th class="px-10 py-2 text-left ">Date</th>
+                <th class="px-10 py-2 text-left ">Amount</th>
+                <th class="px-10 py-2 text-left ">Payment Mode</th>
+                <th class="px-10 py-2 text-left ">Status</th>
+                <th class="px-10 py-2 text-left  col-span-2">Action</th>
+            </tr>
+        </table>
+    </section>
+
 </body>
+
+
 </html>
