--- a/src/index.html
+++ b/src/index.html
@@ -36,34 +36,6 @@
 
     </header>
 
-    <!-- <section class="px-[5%]">
-        <table class="">
-            <tr class=" leading-[17px] text-[14px] ">
-                <th class="px-12 py-2 text-left ">Tracking ID</th>
-                <th class="px-12 py-2 text-left col-span-2">Product</th>
-                <th class="px-12 py-2 text-left ">Customer</th>
-                <th class="px-12 py-2 text-left ">Date</th>
-                <th class="px-12 py-2 text-left ">Amount</th>
-                <th class="px-12 py-2 text-left ">Payment Mode</th>
-                <th class="px-12 py-2 text-left ">Status</th>
-                <th class="px-12 py-2 text-left  col-span-2">Action</th>
-            </tr>
-
-            <tr class=" leading-[17px] text-[14px] ">
-                <td>#20462</td>
-                <td><img src="./images/1_hat.svg" alt=""></td>
-                <td>Hat</td>
-                <td>Matt Dickerson</td>
-                <td>13/05/2022</td>
-                <td>$4.95	</td>
-                <td>Tranfer Bank</td>
-                <td>Delivered</td>
-                <td> <img src="./images/edit.svg" alt=""></td>
-                <td> <img src="./images/delete.svg" alt=""></td>
-            </tr>
-        </table>
-    </section> -->
-
     <section class="max-w-[1200px] m-auto">
         <table class="min-w-full table-auto border-collapse border border-gray-300">
                 <tr class="leading-[17px] text-[14px] bg-gray-100">
@@ -93,7 +65,7 @@
 
                 <tr class="leading-[17px] text-[14px]">
                     <td class="px-0 pl-12 py-2 border-b">#18933</td>
-                    <td class="px-4 pl-8 py-2 border-b flex items-center gap-2"><img src="./images/1_hat.svg" alt="Product Image">Laptop</td>
+                    <td class="px-4 pl-8 py-2 border-b flex items-center gap-2"><img src="./images/2_laptopI.svg" alt="Product Image">Laptop</td>
                     <td class="px-4 pl-8 py-2 border-b">Wiktoria</td>
                     <td class="px-4 pl-8 py-2 border-b">22/05/2022</td>
                     <td class="px-4 pl-10 py-2 border-b">$8.95</td>
@@ -106,7 +78,20 @@
                 </tr>
 
 
-                
+                <tr class="leading-[17px] text-[14px]">
+                    <td class="px-0 pl-12 py-2 border-b">#45169</td>
+                    <td class="px-4 pl-8 py-2 border-b flex items-center gap-2"><img src="./images/3_phone.svg" alt="Product Image">Phone</td>
+                    <td class="px-4 pl-8 py-2 border-b">Trixie Byrd</td>
+                    <td class="px-4 pl-8 py-2 border-b">15/06/2022</td>
+                    <td class="px-4 pl-10 py-2 border-b">$1,149.95	</td>
+                    <td class="px-4 pl-11 py-2 border-b">Cash on Delivery</td>
+                    <td class=" border-b  text-[12px] pl-5"><p class="bg-[#FEF2E5] text-[#CD6200] px-[8px] text-center  py-2 rounded-3xl">Process</p></td>
+                    <td class="px-4 pl-5 py-2 border-b">
+                        <img src="./images/edit.svg" alt="Edit" class="inline-block ml-[15px]">
+                        <img src="./images/delete.svg" alt="Delete" class="inline-block mx-1">
+                    </td>
+                </tr>
+
         </table>
     </section>
     
