--- a/src/index.html
+++ b/src/index.html
@@ -92,6 +92,21 @@
                     </td>
                 </tr>
 
+
+                <tr class="leading-[17px] text-[14px]">
+                    <td class="px-0 pl-12 py-2 border-b">#34304</td>
+                    <td class="px-4 pl-8 py-2 border-b flex items-center gap-2"><img src="./images/3_Bag.svg" alt="Product Image">Bag</td>
+                    <td class="px-4 pl-8 py-2 border-b">Brad Mason</td>
+                    <td class="px-4 pl-8 py-2 border-b">06/09/2022</td>
+                    <td class="px-4 pl-10 py-2 border-b">$899.95</td>
+                    <td class="px-4 pl-11 py-2 border-b">Tranfer Bank</td>
+                    <td class=" border-b  text-[12px] pl-5"><p class="bg-[#FEF2E5] text-[#CD6200] px-[3px] text-center  py-2 rounded-3xl">Process</p></td>
+                    <td class="px-4 pl-5 py-2 border-b">
+                        <img src="./images/edit.svg" alt="Edit" class="inline-block ml-[15px]">
+                        <img src="./images/delete.svg" alt="Delete" class="inline-block mx-1">
+                    </td>
+                </tr>
+                
         </table>
     </section>
     
