6th and 7th table-tr

--- a/src/index.html
+++ b/src/index.html
@@ -122,8 +122,35 @@
                     </td>
                 </tr>
 
+                <tr class="leading-[17px] text-[14px]">
+                    <td class="px-0 pl-12 py-2 border-b">#73003</td>
+                    <td class="px-4 pl-8 py-2 border-b flex items-center gap-2"><img src="./images/6_mouse.svg" alt="Product Image">Mouse</td>
+                    <td class="px-4 pl-8 py-2 border-b">Jun Redfern</td>
+                    <td class="px-4 pl-8 py-2 border-b">04/10/2022</td>
+                    <td class="px-4 pl-10 py-2 border-b">$54.95	</td>
+                    <td class="px-4 pl-11 py-2 border-b">Transfer Bank</td>
+                    <td class=" border-b  text-[12px] pl-5"><p class="bg-[#EBF9F1] text-[#1F9254] px-[8px] text-center  py-2 rounded-3xl">Delivered</td>
+                    <td class="px-4 pl-5 py-2 border-b">
+                        <img src="./images/edit.svg" alt="Edit" class="inline-block ml-[15px]">
+                        <img src="./images/delete.svg" alt="Delete" class="inline-block mx-1">
+                    </td>
+                </tr>
 
-                
+
+                <tr class="leading-[17px] text-[14px]">
+                    <td class="px-0 pl-12 py-2 border-b">#58825</td>
+                    <td class="px-4 pl-8 py-2 border-b flex items-center gap-2"><img src="./images/7_clock.svg" alt="Product Image">Clock</td>
+                    <td class="px-4 pl-8 py-2 border-b">Miriam Kidd</td>
+                    <td class="px-4 pl-8 py-2 border-b">17/10/2022</td>
+                    <td class="px-4 pl-10 py-2 border-b">$174.95</td>
+                    <td class="px-4 pl-11 py-2 border-b">Transfer Bank</td>
+                    <td class=" border-b  text-[12px] pl-5"><p class="bg-[#EBF9F1] text-[#1F9254] px-[8px] text-center  py-2 rounded-3xl">Delivered</td>
+                    <td class="px-4 pl-5 py-2 border-b">
+                        <img src="./images/edit.svg" alt="Edit" class="inline-block ml-[15px]">
+                        <img src="./images/delete.svg" alt="Delete" class="inline-block mx-1">
+                    </td>
+                </tr>
+
         </table>
     </section>
     
