--- a/src/index.html
+++ b/src/index.html
@@ -151,6 +151,22 @@
                     </td>
                 </tr>
 
+
+                <tr class="leading-[17px] text-[14px]">
+                    <td class="px-0 pl-12 py-2 border-b">#44122</td>
+                    <td class="px-4 pl-8 py-2 border-b flex items-center gap-2"><img src="./images/8_T-shirt.svg" alt="Product Image">T-shirt</td>
+                    <td class="px-4 pl-8 py-2 border-b">Dominic</td>
+                    <td class="px-4 pl-8 py-2 border-b">24/10/2022</td>
+                    <td class="px-4 pl-10 py-2 border-b">$249.95</td>
+                    <td class="px-4 pl-11 py-2 border-b">Cash on Delivery</td>
+                    <td class=" border-b  text-[12px] pl-5"><p class="bg-[#EBF9F1] text-[#1F9254] px-[8px] text-center  py-2 rounded-3xl">Delivered</td>
+                    <td class="px-4 pl-5 py-2 border-b">
+                        <img src="./images/edit.svg" alt="Edit" class="inline-block ml-[15px]">
+                        <img src="./images/delete.svg" alt="Delete" class="inline-block mx-1">
+                    </td>
+                </tr>
+
+
         </table>
     </section>
     
