--- a/src/index.html
+++ b/src/index.html
@@ -38,6 +38,7 @@
 
     <section class="max-w-[1200px] m-auto">
         <table class="min-w-full table-auto border-collapse border border-gray-300">
+
                 <tr class="leading-[17px] text-[14px] bg-gray-100">
                     <th class="px-9 py-2">Tracking ID</th>
                     <th class="px-9 py-2 text-left">Product</th>
@@ -56,10 +57,10 @@
                     <td class="px-4 pl-8 py-2 ">13/05/2022</td>
                     <td class="px-4 pl-10 py-2">$4.95</td>
                     <td class="px-4 pl-11 py-2">Transfer Bank</td>
-                    <td class="text-[12px] pl-5"><p class="bg-[#EBF9F1] text-[#1F9254] px-[8px] text-center  py-2 rounded-3xl">Delivered</td>
+                    <td class="text-[12px] pl-5"><p class="bg-[#EBF9F1] text-[#1F9254] px-[8px] text-center  py-2 rounded-3xl cursor-pointer	">Delivered</td>
                     <td class="px-4 pl-5 py-2">
-                        <img src="./images/edit.svg" alt="Edit" class="inline-block ml-[15px]">
-                        <img src="./images/delete.svg" alt="Delete" class="inline-block mx-1">
+                        <img src="./images/edit.svg" alt="Edit" class="inline-block ml-[15px] cursor-pointer">
+                        <img src="./images/delete.svg" alt="Delete" class="inline-block mx-1  cursor-pointer">
                     </td>
                 </tr>
 
@@ -70,10 +71,10 @@
                     <td class="px-4 pl-8 py-2 ">22/05/2022</td>
                     <td class="px-4 pl-10 py-2">$8.95</td>
                     <td class="px-4 pl-11 py-2">Cash on Delivery</td>
-                    <td class="text-[12px] pl-5"><p class="bg-[#EBF9F1] text-[#1F9254] px-[8px] text-center  py-2 rounded-3xl">Delivered</p></td>
+                    <td class="text-[12px] pl-5"><p class="bg-[#EBF9F1] text-[#1F9254] px-[8px] text-center  py-2 rounded-3xl cursor-pointer">Delivered</p></td>
                     <td class="px-4 pl-5 py-2">
-                        <img src="./images/edit.svg" alt="Edit" class="inline-block ml-[15px]">
-                        <img src="./images/delete.svg" alt="Delete" class="inline-block mx-1">
+                        <img src="./images/edit.svg" alt="Edit" class="inline-block ml-[15px] cursor-pointer">
+                        <img src="./images/delete.svg" alt="Delete" class="inline-block mx-1  cursor-pointer">
                     </td>
                 </tr>
 
@@ -84,10 +85,10 @@
                     <td class="px-4 pl-8 py-2 ">15/06/2022</td>
                     <td class="px-4 pl-10 py-2">$1,149.95	</td>
                     <td class="px-4 pl-11 py-2">Cash on Delivery</td>
-                    <td class="text-[12px] pl-5"><p class="bg-[#FEF2E5] text-[#CD6200] px-[8px] text-center  py-2 rounded-3xl">Process</p></td>
+                    <td class="text-[12px] pl-5"><p class="bg-[#FEF2E5] text-[#CD6200] px-[8px] text-center  py-2 rounded-3xl cursor-pointer">Process</p></td>
                     <td class="px-4 pl-5 py-2">
-                        <img src="./images/edit.svg" alt="Edit" class="inline-block ml-[15px]">
-                        <img src="./images/delete.svg" alt="Delete" class="inline-block mx-1">
+                        <img src="./images/edit.svg" alt="Edit" class="inline-block ml-[15px] cursor-pointer">
+                        <img src="./images/delete.svg" alt="Delete" class="inline-block mx-1  cursor-pointer">
                     </td>
                 </tr>
 
@@ -98,10 +99,10 @@
                     <td class="px-4 pl-8 py-2 ">06/09/2022</td>
                     <td class="px-4 pl-10 py-2">$899.95</td>
                     <td class="px-4 pl-11 py-2">Tranfer Bank</td>
-                    <td class="text-[12px] pl-5"><p class="bg-[#FEF2E5] text-[#CD6200] px-[3px] text-center  py-2 rounded-3xl">Process</p></td>
+                    <td class="text-[12px] pl-5"><p class="bg-[#FEF2E5] text-[#CD6200] px-[3px] text-center  py-2 rounded-3xl cursor-pointer">Process</p></td>
                     <td class="px-4 pl-5 py-2">
-                        <img src="./images/edit.svg" alt="Edit" class="inline-block ml-[15px]">
-                        <img src="./images/delete.svg" alt="Delete" class="inline-block mx-1">
+                        <img src="./images/edit.svg" alt="Edit" class="inline-block ml-[15px] cursor-pointer">
+                        <img src="./images/delete.svg" alt="Delete" class="inline-block mx-1  cursor-pointer">
                     </td>
                 </tr>
 
@@ -112,10 +113,10 @@
                     <td class="px-4 pl-8 py-2 ">25/09/2022</td>
                     <td class="px-4 pl-10 py-2">$22.95	</td>
                     <td class="px-4 pl-11 py-2">Cash on Delivery</td>
-                    <td class="text-[12px] pl-5"><p class="bg-[#FEF2E5] text-[#A30D11] px-[3px] text-center  py-2 rounded-3xl">Canceled</p></td>
+                    <td class="text-[12px] pl-5"><p class="bg-[#FEF2E5] text-[#A30D11] px-[3px] text-center  py-2 rounded-3xl cursor-pointer">Canceled</p></td>
                     <td class="px-4 pl-5 py-2">
-                        <img src="./images/edit.svg" alt="Edit" class="inline-block ml-[15px]">
-                        <img src="./images/delete.svg" alt="Delete" class="inline-block mx-1">
+                        <img src="./images/edit.svg" alt="Edit" class="inline-block ml-[15px] cursor-pointer">
+                        <img src="./images/delete.svg" alt="Delete" class="inline-block mx-1  cursor-pointer">
                     </td>
                 </tr>
 
@@ -126,10 +127,10 @@
                     <td class="px-4 pl-8 py-2 ">04/10/2022</td>
                     <td class="px-4 pl-10 py-2">$54.95	</td>
                     <td class="px-4 pl-11 py-2">Transfer Bank</td>
-                    <td class="text-[12px] pl-5"><p class="bg-[#EBF9F1] text-[#1F9254] px-[8px] text-center  py-2 rounded-3xl">Delivered</td>
+                    <td class="text-[12px] pl-5"><p class="bg-[#EBF9F1] text-[#1F9254] px-[8px] text-center  py-2 rounded-3xl cursor-pointer">Delivered</td>
                     <td class="px-4 pl-5 py-2">
-                        <img src="./images/edit.svg" alt="Edit" class="inline-block ml-[15px]">
-                        <img src="./images/delete.svg" alt="Delete" class="inline-block mx-1">
+                        <img src="./images/edit.svg" alt="Edit" class="inline-block ml-[15px] cursor-pointer">
+                        <img src="./images/delete.svg" alt="Delete" class="inline-block mx-1  cursor-pointer">
                     </td>
                 </tr>
 
@@ -140,10 +141,10 @@
                     <td class="px-4 pl-8 py-2 ">17/10/2022</td>
                     <td class="px-4 pl-10 py-2">$174.95</td>
                     <td class="px-4 pl-11 py-2">Transfer Bank</td>
-                    <td class="text-[12px] pl-5"><p class="bg-[#EBF9F1] text-[#1F9254] px-[8px] text-center  py-2 rounded-3xl">Delivered</td>
+                    <td class="text-[12px] pl-5"><p class="bg-[#EBF9F1] text-[#1F9254] px-[8px] text-center  py-2 rounded-3xl cursor-pointer">Delivered</td>
                     <td class="px-4 pl-5 py-2">
-                        <img src="./images/edit.svg" alt="Edit" class="inline-block ml-[15px]">
-                        <img src="./images/delete.svg" alt="Delete" class="inline-block mx-1">
+                        <img src="./images/edit.svg" alt="Edit" class="inline-block ml-[15px] cursor-pointer">
+                        <img src="./images/delete.svg" alt="Delete" class="inline-block mx-1  cursor-pointer">
                     </td>
                 </tr>
 
@@ -154,10 +155,10 @@
                     <td class="px-4 pl-8 py-2  ">24/10/2022</td>
                     <td class="px-4 pl-10 py-2 ">$249.95</td>
                     <td class="px-4 pl-11 py-2 ">Cash on Delivery</td>
-                    <td class="text-[12px] pl-5"><p class="bg-[#EBF9F1] text-[#1F9254] px-[8px] text-center  py-2 rounded-3xl">Delivered</td>
+                    <td class="text-[12px] pl-5"><p class="bg-[#EBF9F1] text-[#1F9254] px-[8px] text-center  py-2 rounded-3xl cursor-pointer">Delivered</td>
                     <td class="px-4 pl-5 py-2">
-                        <img src="./images/edit.svg" alt="Edit" class="inline-block ml-[15px]">
-                        <img src="./images/delete.svg" alt="Delete" class="inline-block mx-1">
+                        <img src="./images/edit.svg" alt="Edit" class="inline-block ml-[15px] cursor-pointer">
+                        <img src="./images/delete.svg" alt="Delete" class="inline-block mx-1  cursor-pointer">
                     </td>
                 </tr>
 
@@ -168,10 +169,24 @@
                     <td class="px-4 pl-8 py-2 ">01/11/2022</td>
                     <td class="px-4 pl-10 py-2">$899.95</td>
                     <td class="px-4 pl-11 py-2">Tranfer Bank</td>
-                    <td class="text-[12px] pl-5"><p class="bg-[#FEF2E5] text-[#A30D11] px-[3px] text-center  py-2 rounded-3xl">Canceled</p></td>
+                    <td class="text-[12px] pl-5"><p class="bg-[#FEF2E5] text-[#A30D11] px-[3px] text-center  py-2 rounded-3xl cursor-pointer">Canceled</p></td>
                     <td class="px-4 pl-5 py-2">
-                        <img src="./images/edit.svg" alt="Edit" class="inline-block ml-[15px]">
-                        <img src="./images/delete.svg" alt="Delete" class="inline-block mx-1">
+                        <img src="./images/edit.svg" alt="Edit" class="inline-block ml-[15px] cursor-pointer">
+                        <img src="./images/delete.svg" alt="Delete" class="inline-block mx-1  cursor-pointer">
+                    </td>
+                </tr>
+
+                <tr class="leading-[17px] text-[14px] border-b">
+                    <td class="px-0 pl-12 py-2">#85252</td>
+                    <td class="px-4 pl-8 py-2  flex items-center gap-2"><img src="./images/10_Keyboard.svg" alt="Product Image">Keyboard</td>
+                    <td class="px-4 pl-8 py-2 ">Poppy-Rose</td>
+                    <td class="px-4 pl-8 py-2 ">22/11/2022</td>
+                    <td class="px-4 pl-10 py-2">$6.948</td>
+                    <td class="px-4 pl-11 py-2">Tranfer Bank</td>
+                    <td class="text-[12px] pl-5"><p class="bg-[#FEF2E5] text-[#CD6200] px-[3px] text-center  py-2 rounded-3xl cursor-pointer">Process</p></td>
+                    <td class="px-4 pl-5 py-2">
+                        <img src="./images/edit.svg" alt="Edit" class="inline-block ml-[15px] cursor-pointer">
+                        <img src="./images/delete.svg" alt="Delete" class="inline-block mx-1  cursor-pointer">
                     </td>
                 </tr>
         </table>
