--- a/src/index.html
+++ b/src/index.html
@@ -37,6 +37,7 @@
     </header>
 
     <section class="max-w-[1200px] m-auto">
+
         <table class="min-w-full table-auto border-collapse border border-gray-300">
 
                 <tr class="leading-[17px] text-[14px] bg-gray-100">
@@ -190,6 +191,14 @@
                     </td>
                 </tr>
         </table>
+    </section>
+
+    <section class="leading-[14.63px] font-[500] flex justify-center items-center gap-3 p-[20px] max-w-[1200px] m-auto">
+        <p class="text-[#9E9E9E]  cursor-pointer hover:text-blue-700 ">Previous</p>
+        <p class="px-[14px] py-[10px] cursor-pointer bg-[#E0E0E0] hover:bg-blue-700 hover:text-yellow-300  rounded-lg ">1</p>
+        <p class="px-[14px] py-[10px] cursor-pointer bg-[#E0E0E0] hover:bg-blue-700 hover:text-yellow-300 rounded-lg ">2</p>
+        <p class="px-[14px] py-[10px] cursor-pointer bg-[#E0E0E0] hover:bg-blue-700 hover:text-yellow-300 rounded-lg ">3</p>
+        <p class="text-[#9E9E9E] cursor-pointer hover:text-blue-700 ">Next</p>
     </section>
     
     
