--- a/src/index.html
+++ b/src/index.html
@@ -14,20 +14,20 @@
         <section class="flex justify-between items-center gap-6">
             <nav class="flex justify-between items-center gap-3 text-[12px] font-[500] leading-[14.63px]">
                 <p>Show</p>
-                <div class="flex gap-1 p-[9px] bg-[#E0E0E0] rounded-lg">
+                <div class="flex items-center gap-1 p-[9px] bg-[#E0E0E0] rounded-lg cursor-pointer hover:bg-[#c0bebe]">
                     <p class=" ">10</p>
                     <img src="./images/strelka_poyon.svg" alt="">
                 </div>
                 <p>entries</p>
             </nav>
-            <div class="flex gap-2 w-[218px] items-center border-[1px] border-[#9E9E9E] p-[8px] rounded-lg">
+            <div class="flex gap-2 w-[258px] items-center border-[1px] border-[#c2c1c1] p-[8px] rounded-lg">
                 <img src="./images/icons_search.svg" alt="">
                 <input type="text" placeholder="Search" class="outline-none">
             </div>
         </section>
 
         <section>
-            <div class="flex items-center px-[12px] py-[8.5px] bg-[#624DE3] rounded-lg  gap-2">
+            <div class="flex items-center px-[12px] py-[8.5px] bg-[#624DE3] hover:bg-[#a736a1] transform transition-all duration-300 ease-in-out hover:scale-90 rounded-lg cursor-pointer gap-2">
                 <img src="./images/+.svg" alt="">
                 <p class="text-white font-[700] ">Add Customer</p>
             </div>
